--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -16,7 +16,7 @@
                 </div>
             </form>
         </div>
-        <div class="row col-lg-12">
+        <div id='defaultLocation' class="row col-lg-12">
             <div class="col-lg-12 mx-auto">
                 <header class="text-center pb-">
                     <h1 class="h2"> {{placeName}}</h1>
@@ -24,7 +24,7 @@
                 </header>
             </div>
         </div>
-        <div class="row">
+        <div id="defaultWeather" class="row">
             <div class="col-lg-12 mx-auto">
                 <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
                     <div class="blockquote-custom-icon bg-info shadow-sm"><i class="fa fa-quote-left text-white"></i>
